# credit-risk-xai-thesis

./: .gitignore  DATA_QUALITY_REPORT.md  FEATURES.md  Makefile  README.md  feature_analysis_detailed.csv  pyproject.toml  requirements.txt  test_feature_reduction.py
credit_risk_xai/: __init__.py  config.py  plotting.py
docs/: mkdocs.yml
notebooks/: 00_data_exploration.ipynb  00_data_quality_audit.ipynb  00a_hyperparameter_tuning.ipynb  00b_ml_comparison.ipynb  01_exploration.ipynb  02_modelling_test.ipynb  03_feature_selection.ipynb  04_feature_pruning.ipynb  05_xai_exploration.ipynb  05a_xai_global.ipynb  05b_xai_temporal.ipynb  05bb_xai_temporal_oneyear.ipynb  05c_xai_case_studies.ipynb  05d_xai_clustering.ipynb  PHASE2_PRUNING_SUMMARY.md  README.md  backward_elimination_path.csv  feature_analysis_master.csv  feature_comparison_all.csv  feature_selection_results.csv  final_temporal_features.txt  final_temporal_features_corrected.txt  final_temporal_features_nested_cv.txt  greedy_selection_path.csv  incremental_feature_addition.csv  method_performance_comparison.csv  strategy_performance_comparison.csv  temporal_computation_redundancy.json  temporal_computation_redundancy_corrected.json  temporal_computation_redundancy_nested_cv.json  temporal_feature_selection_summary.csv  temporal_feature_selection_summary_nested_cv.csv  temporal_final_comparison_nested_cv.csv  temporal_metric_importance.csv  temporal_metric_importance_corrected.csv  temporal_metric_importance_nested_cv.csv  temporal_shap_recovery_test.csv  temporal_window_selection.csv  (+1 more)
src/: xai_utils.py
(+41 files in other folders)
