[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "credit_risk_xai"
version = "0.0.1"
description = "A Bachelor's thesis on applying explainable AI to corporate credit risk prediction for SMEs."
authors = [
  { name = "Vilhelm Karlin, Minna Olsson" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.14.0"


[tool.ruff]
line-length = 99
src = ["credit_risk_xai"]
include = ["pyproject.toml", "credit_risk_xai/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["credit_risk_xai"]
force-sort-within-sections = true

